syntax = "proto3";

message OnChainEventState {
  uint64 last_l2_block = 1;
}

message FnameState {
  uint64 last_fname_proof = 1;
}
